  note that path.status(updates=1) will not properly work svn-17's status 
  --xml output is broken.
- make source.getstatementrange() more resilent about non-python code frames
  (as seen from jnja2)
- make trackeback recursion detection more resilent
  about the eval magic of a decorator library
- add py.builtin.next
- iniconfig: add support for ; as comment starter

Changes between 1.4.4 and 1.4.5
==================================================

- improve some unicode handling in terminalwriter and capturing
  (used by pytest)

Changes between 1.4.3 and 1.4.4
==================================================

- a few fixes and assertion related refinements for pytest-2.1
- guard py.code.Code and getfslineno against bogus input
  and make py.code.Code objects for object instance
  by looking up their __call__ function.
- make exception presentation robust against invalid current cwd

Changes between 1.4.2 and 1.4.3
==================================================

- fix terminal coloring issue for skipped tests (thanks Amaury)
- fix issue4 - large calls to ansi_print (thanks Amaury)

Changes between 1.4.1 and 1.4.2
==================================================

- fix (pytest) issue23 - tmpdir argument now works on Python3.2 and WindowsXP
  (which apparently starts to offer os.symlink now)

- better error message for syntax errors from compiled code

- small fix to better deal with (un-)colored terminal output on windows

Changes between 1.4.0 and 1.4.1
==================================================

- fix issue1 - py.error.* classes to be pickleable

- fix issue2 - on windows32 use PATHEXT as the list of potential
  extensions to find find binaries with py.path.local.sysfind(commandname)

- fix (pytest-) issue10 and refine assertion reinterpretation
  to avoid breaking if the __nonzero__ of an object fails

- fix (pytest-) issue17 where python3 does not like "import *"
  leading to misrepresentation of import-errors in test modules
