@@ -14,6 +14,7 @@ Changes between 1.4.5 and 1.4.x
   about the eval magic of a decorator library
 - add py.builtin.next
 - iniconfig: add support for ; as comment starter
+- properly handle lists in xmlgen on python3
 
 Changes between 1.4.4 and 1.4.5
 ==================================================
